--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,19 @@ body{
 p{
     color : white;
     margin: 30px;
-    font-size: 20px;
+    font-size: 60px;
 }
 
 h1{
     color: white;
     margin: 30px;
-    font-size: 70px;
+    font-size: 210px;
 }
 
 h2{
     color: white;
     text-align: center;
-    font-size: 30px;
+    font-size: 90px;
 }
 
 .heading-image{
@@ -35,13 +35,12 @@ body > div > .line1{
     margin-bottom: 0;
 }
 
-body > div > .line2{
+body > div > div > .line2{
     min-width: 10px;
     max-width: 10px;
     background-color: white;
     border-radius: 100px;
     height: auto;
-    flex-shrink: 0;
     margin: 30px;
 }
 
@@ -52,7 +51,6 @@ body > div > .line2{
 
 .biografija-content{
     display: flex;
-    align-content: center;
 }
 
 .biografija-nabrajanje{
@@ -71,11 +69,19 @@ body > div > .line2{
 
 .linija{
     display: flex;
-    align-content: center;
+    align-items: center; 
 }
 
-.linija p{
+.linija > p{
     margin: 10px 30px;
     padding: 0;
+}
+
+.okvir{
+    background-color: #1a1a1a;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 30px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
 
