--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,25 @@ body{
 p{
     color : white;
     margin: 30px;
-    font-size: 60px;
+    font-size: 20px;
 }
 
 h1{
     color: white;
     margin: 30px;
-    font-size: 210px;
+    font-size: 70px;
 }
 
 h2{
     color: white;
     text-align: center;
-    font-size: 90px;
+    font-size: 30px;
+}
+
+h3{
+    text-align: center;
+    color: white;
+    font-size: 20px;
 }
 
 .heading-image{
@@ -47,6 +53,7 @@ body > div > div > .line2{
 .seperator{
     display: flex;
     justify-content: center;
+    margin-bottom: 55px;;
 }
 
 .biografija-content{
@@ -84,4 +91,17 @@ body > div > div > .line2{
     margin: 30px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
+
+.meni{
+    display: flex;
+    justify-content: space-around;
+}
+
+.image-meni{
+    width: 350px;
+    height: 350px;
+    border-radius: 10%;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
 
