--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body > div > div > .line2{
     max-width: 10px;
     background-color: white;
     border-radius: 100px;
-    height: auto;
+    align-self: stretch;
     margin: 30px;
 }
 
