--- a/styles.css
+++ b/styles.css
@@ -122,4 +122,5 @@ a:hover {
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 100px;
 }
