--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: #1a1a1a;
     margin: 0;
 }
 
@@ -10,20 +10,20 @@ p{
 }
 
 h1{
-    color: white;
+    color: #FFC90E;
     margin: 30px;
     font-size: 70px;
 }
 
 h2{
-    color: white;
+    color: #FFC90E;
     text-align: center;
     font-size: 30px;
 }
 
 h3{
     text-align: center;
-    color: white;
+    color: #FFC90E;
     font-size: 20px;
 }
 
@@ -34,7 +34,7 @@ h3{
 
 body > div > .line1{
     width: 90%;
-    background-color: white;
+    background-color: #FFC90E;
     border-radius: 100px;
     height: 10px;
     margin: 30px;
@@ -44,7 +44,7 @@ body > div > .line1{
 body > div > div > .line2{
     min-width: 10px;
     max-width: 10px;
-    background-color: white;
+    background-color: #FFC90E;
     border-radius: 100px;
     align-self: stretch;
     margin: 30px;
@@ -71,7 +71,7 @@ body > div > div > .line2{
     max-width: 10px;
     height: 10px;
     border-radius: 10px;
-    background-color: white;
+    background-color: #FFC90E;
     margin: 10px 30px;
 }
 
@@ -86,8 +86,9 @@ body > div > div > .line2{
 }
 
 .okvir{
-    background-color: #1a1a1a;
+    background-color: #570008 ;
     border-radius: 20px;
+    border: 2px solid #961217;
     padding: 20px;
     margin: 30px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
