--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,20 @@ p{
 }
 
 h1{
-    color: #FFC90E;
+    color: #ac8a0d;
     margin: 30px;
     font-size: 70px;
 }
 
 h2{
-    color: #FFC90E;
+    color: #ac8a0d;
     text-align: center;
     font-size: 30px;
 }
 
 h3{
     text-align: center;
-    color: #FFC90E;
+    color: #ac8a0d;
     font-size: 20px;
 }
 
@@ -34,7 +34,7 @@ h3{
 
 body > div > .line1{
     width: 90%;
-    background-color: #FFC90E;
+    background-color: #ac8a0d;
     border-radius: 100px;
     height: 10px;
     margin: 30px;
@@ -44,7 +44,7 @@ body > div > .line1{
 body > div > div > .line2{
     min-width: 10px;
     max-width: 10px;
-    background-color: #FFC90E;
+    background-color: #ac8a0d;
     border-radius: 100px;
     align-self: stretch;
     margin: 30px;
@@ -71,7 +71,7 @@ body > div > div > .line2{
     max-width: 10px;
     height: 10px;
     border-radius: 10px;
-    background-color: #FFC90E;
+    background-color: #ac8a0d;
     margin: 10px 30px;
 }
 
