--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ body > div > div > .line2{
     height: 350px;
     border-radius: 10%;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    margin-bottom: 20px;
 }
 
 a{
@@ -124,4 +125,44 @@ a:hover {
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     border-radius: 100px;
+}
+
+@media (max-width: 768px) {
+    .image-meni {
+        width: 100%;
+        height: auto;
+    }
+    
+    .meni {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    h3,p{
+        font-size: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    h1{
+        font-size: 35px;
+    }
+
+    h2{
+        font-size: 15px;
+    }
+
+    .line2{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    .okvir{
+        padding: 5px;
+    }
+
+    .dot{
+        margin-left: 30px;
+        margin-right: 5px;
+    }
 }
