--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ h3{
     height: 100%;
 }
 
-body > div > .line1{
+.line1{
     width: 90%;
     background-color: #ac8a0d;
     border-radius: 100px;
@@ -41,7 +41,7 @@ body > div > .line1{
     margin-bottom: 0;
 }
 
-body > div > div > .line2{
+.line2{
     min-width: 10px;
     max-width: 10px;
     background-color: #ac8a0d;
@@ -143,5 +143,52 @@ a{
     text-align: center;
     flex: 1;
     justify-content: space-between;
+}
+
+@media (max-width: 670px) {
+    .meni {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .image-meni{
+        width: 70vw;
+        height: 70vw;
+    }
+
+    p{
+        font-size: 10px;
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    h1{
+        font: 35px;
+    }
+
+    h2{
+        font-size: 15px;
+    }
+
+    .line2{
+        margin-left: 5px;
+        margin-right: 30px;;
+    }
+
+    .dot{
+        margin-left: 0px;
+        margin-right: 5px;;
+    }
+
+    .okvir{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .linija{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
 
