uklanjanje hover ekekta na telefonu, pokusaj 1

--- a/styles.css
+++ b/styles.css
@@ -192,3 +192,14 @@ a{
     }
 }
 
+@media (hover: none) {
+    .image-meni:hover {
+        transform: none;
+        box-shadow: none;
+    }
+
+    .biografija-content a:hover {
+        transform: none;
+        box-shadow: none;
+    }
+}
