--- a/styles.css
+++ b/styles.css
@@ -164,11 +164,15 @@ a{
     }
 
     h1{
-        font: 25px;
+        font-size: 35px;
     }
 
     h2{
-        font-size: 20px;
+        font-size: 25px;
+    }
+
+    h3{
+        font-size: 15px;
     }
 
     .line2{
